--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/simonevigasio/rumate#readme",
   "dependencies": {
+    "debug": "^4.3.4",
     "express": "^4.19.2",
+    "helmet": "^7.1.0",
     "joi": "^17.13.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.0"
   }
 }
