--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   "homepage": "https://github.com/simonevigasio/rumate#readme",
   "dependencies": {
     "debug": "^4.3.4",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "joi": "^17.13.0",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0"
   }
