--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
   },
   "homepage": "https://github.com/simonevigasio/rumate#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "debug": "^4.3.4",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "joi": "^17.13.0",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.3",
-    "morgan": "^1.10.0",
     "nodemon": "^3.1.0"
   }
 }
