--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/simonevigasio/rumate#readme",
   "dependencies": {
+    "@joi/date": "^2.1.1",
     "bcrypt": "^5.1.1",
     "debug": "^4.3.4",
     "dotenv": "^16.4.5",
@@ -25,6 +26,7 @@
     "joi": "^17.13.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.3",
     "nodemon": "^3.1.0"
