--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -20,9 +21,9 @@
     "@joi/date": "^2.1.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "debug": "^4.3.4",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "googleapis": "^137.1.0",
     "helmet": "^7.1.0",
     "joi": "^17.13.0",
     "jsonwebtoken": "^9.0.2",
