--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "dependencies": {
     "@joi/date": "^2.1.1",
     "bcrypt": "^5.1.1",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "googleapis": "^137.1.0",
     "helmet": "^7.1.0",
     "joi": "^17.13.0",
     "jsonwebtoken": "^9.0.2",
@@ -31,6 +31,8 @@
     "moment": "^2.30.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.3",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "passport": "^0.5.3",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
