--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "naive-ui": "^2.38.2",
+    "vfonts": "^0.0.3",
     "vite": "^5.2.8"
   }
 }
