--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "moment": "^2.30.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.3",
-    "nodemon": "^3.1.0"
+    "socket.io": "^4.7.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.1"
   }
 }
